Fix some more overflow issues

--- a/style.css
+++ b/style.css
@@ -44,19 +44,20 @@ header {
     width:100%;
     display:flex;
     justify-content: center;
+    position:fixed;
+    z-index:200;
+    background-color:rgba(255, 255, 255, 0.9) !important;
+
 }
 .header-wrapper {
     display:flex;
     justify-content: space-between;
     align-items: center;
-    position:fixed;
     width:100%;
     padding-inline:6rem;
-    background-color:white;
-    z-index:200;
+    
     max-width:1440px;
     background-color:transparent;
-    background-color:rgba(255, 255, 255, 0.9) !important;
     padding-block:1.5rem;
     
 }
